# tensai

./: .gitignore  README.md  docker-compose.yml
backend/api/: Dockerfile  db.py  env.py  mahjong.yaml  main.py  pyproject.toml
backend/api/cruds/: room.py  user.py
backend/api/models/: player.py  room.py  user.py
backend/api/routers/: game.py  room.py  user.py
backend/api/routers/majan/: game.py  janshi.py  main.py  rule.py  taku.py
backend/api/routers/majan/manager/: action.py  connection.py  connection_manager.py  game.py  game_manager.py  state.py  timer.py
backend/api/schemas/: player.py  room.py  user.py
frontend/: Dockerfile  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthContext.tsx  Login.tsx  ProtectRoute.tsx  Register.tsx  logout.tsx
frontend/src/components/room/: MatchingRoom.tsx  PaiList.ts  Room.tsx  RoomForm.tsx  RoomListItem.tsx  style.css
frontend/src/components/room/hand/: Hands.tsx  handsUtil.ts
frontend/src/pages/: HomePage.tsx  LoadingPage.tsx  LoginPage.tsx  MatchPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  RoomPage.tsx  homePage.css
frontend/src/utils/: roomApi.ts  theme.ts
mysql/init/: init.sql
